fix travis error